# bicoca_hack

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Untitled-1.ipynb  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_create_cv_pipeline_tables.py  183b2c5ef4f2_.py  1f7c6d8e9b10_add_candidate_entity_tables.py  2c4a9e7b1d11_add_hh_skill_normalization_fields.py  39c1a8d4b2f0_add_rule_search_indexes.py  4b5d7e2a9c31_add_candidate_document_chunks.py  5a6c7e8f9d10_add_job_search_preparation_tables.py  6b7c8d9e0f11_add_entity_normalizations_table.py  7a8b9c0d1e2f_add_remote_policies_json_fields.py  8edeaf901b1c_refine_candidate_document_sections.py  9c1d2e3f4a5b_add_candidate_employment_types_json.py  a1b2c3d4e5f6_add_job_search_employment_types_json.py
docker/backend/: entrypoint.sh
docker/pgadmin/: servers.json
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  quasar.config.ts
frontend/src/api/: backend.ts  contracts.ts  errors.ts  http.ts  index.ts  placeholder.ts
frontend/src/boot/: api.ts
frontend/src/components/: AppPageHeader.vue
frontend/src/css/: app.scss
scripts/: run_app.sh  run_migrations.sh
src/app/: main.py
tests/: conftest.py  test_candidate_match_scoring.py  test_candidate_rule_search.py  test_candidate_vector_search.py  test_cv_api.py  test_entity_extraction.py  test_entity_normalization.py  test_hh_skill_normalizer.py  test_hh_work_normalizer.py  test_job_search_preparation.py  test_openai_embeddings.py
(+79 files in other folders)
