[project]
name = "hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "aioboto3>=15.5.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "langchain-core>=0.3.79",
    "langchain-openai>=0.3.35",
    "langchain-unstructured>=0.1.6",
    "langgraph>=0.6.0",
    "loguru>=0.7.3",
    "opencv-python==4.12.0.88",
    "pydantic>=2.11.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings==2.11.0",
    "pypdf>=5.4.0",
    "pydub==0.25.1",
    "fastapi==0.119.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-multipart==0.0.20",
    "qdrant-client==1.16.0",
    "sqlalchemy>=2.0.43",
    "unstructured==0.18.27",
    "uvicorn==0.38.0",
    "black>=26.3.1",
    "flake8>=7.3.0",
]
